k8s/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - port: 3306
  selector:
    app: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        args: ["--default-authentication-plugin=mysql_native_password"]
